overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,7 @@ input[type=number] {
 }
 
 .main-container {
-  @apply relative grid grid-flow-row grid-cols-1 grid-rows-2 overflow-x-hidden sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-x-3 gap-y-5 mt-9;
+  @apply relative grid grid-flow-row grid-cols-1 grid-rows-2 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-x-3 gap-y-5 mt-9;
 }
 
 .footer {
